fusion-cli-tests/test/e2e/syntax-error/fixture/src/__tests__/index.node.js
// @noflow
const test = require('tape');
const app = require('fusion-cli/entries/server-entry');

test('server test runs', t => {
  t.pass('server test runs');
  t.end();
});
